syntax = "proto3";

package cost;

import "counters.proto";
import "mana.proto";
import "targets.proto";
import "types.proto";

enum ManaCost {
  WHITE = 0;
  BLUE = 1;
  BLACK = 2;
  RED = 3;
  GREEN = 4;
  COLORLESS = 5;
  GENERIC = 6;
  X = 7;
  TWO_X = 8;
}

message AbilityRestriction {
  message AttackedWithXOrMoreCreatures {
    uint32 x_is = 1;
  }
  message OncePerTurn {}

  oneof restriction {
    AttackedWithXOrMoreCreatures attacked_with_x_or_more_creatures = 1;
    OncePerTurn once_per_turn = 2;
  }
}

message Ward {
  repeated ManaCost mana_cost = 1;
}

message CastingCost {
  repeated ManaCost mana_cost = 1;
}

message AbilityCost {
  repeated ManaCost mana_cost = 1;
  bool tap = 2;
  repeated AbilityRestriction restrictions = 3;
}

enum XIs { MANA_VALUE_OF_SELECTED = 0; }

message CostReducer {
  message TargetMatches {
    repeated targets.Restriction restrictions = 1;
  }

  oneof when {
    TargetMatches target_matches = 2;
  }

  repeated ManaCost reduction = 3;
}